# DeepSearchJobs

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose-dev.yml  docker-compose.yml  launch_dev_mode.sh  launch_prod_mode.sh  package-lock.json  package.json  poub.md  pyproject.toml
.github/workflows/: deploy.yaml
backend/: .dockerignore  .env  .env.example  .env.production  Dockerfile  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/db/: .env.example  notes.txt
backend/db/connect/: Dockerfile
backend/db/connect/scripts/: clean_es.sh  configure_postgres_configuration.sh  configure_postgres_configuration_dev.sh  set_connectors.sh
backend/db/drizzle/: drizzle.config.ts  drizzle.ts  schema.ts
backend/db/drizzle/migrations/: 0000_warm_zeigeist.sql  0001_certain_dakota_north.sql  0002_left_starbolt.sql  0003_lame_pretty_boy.sql  001_add_update_trigger.sql
backend/db/elasticsearch/: elasticsearch.ts
backend/src/: app.ts
backend/src/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json
backend/src/plugins/: embeddings.ts  i18n.ts  rabbitmq.ts
backend/src/routes/: companies.ts  jobs.ts
backend/src/types/: fastify.d.ts
backend/src/utilities/: elasticSearchJobs.ts
base_worker/: Dockerfile  notes.txt  requirements.txt
data/: DATA.md  test.xlsx
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/i18n/: i18n.ts
frontend/src/layouts/: Layout.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: AppliedJobs.tsx  Companies.tsx  Jobs.tsx  NotInterestedJobs.tsx
frontend/src/types/: companies.ts  jobs.ts
pgadmin/: servers.json  servers.prod.json
worker/: .env.example  Dockerfile  base_scraper.py  dependencies.py  main.py  session_processing.py
worker/constants/: __init__.py  blocked_ads.py  blocked_domains.py  media_extensions.py  proxies.py  user_agents.py
worker/core/: db_ops.py  find_company_logo.py  job_listings_scraper.py  jobs_scraper.py  lazy_loading_detector.py  show_more_button_detector.py  website_scraper.py
worker/core/page_processing/: constants.py  page_processing.py
worker/core/pagination_detector/: constants.py  pagination_detector.py
worker/core/post_process_jobs/: post_process_jobs.py
worker/types/: worker_types.py
worker/utils/: dlq.py  llm_utils.py  logging_utils.py  redis_commands.py  text_utils.py  url_utils.py  xpath_utils.py
worker_async/: Dockerfile  base_scraper.py  blocked_ads.json  logging_utils.py  main.py  message_processing.py  worker_types.py
worker_async/core/: find_company_logo.py  job_listings_scraper.py  jobs_scraper.py  pagination_detector.py  post_process_jobs.py  show_more_button_detector.py  website_scraper.py
worker_sync/: .env.example  Dockerfile  base_scraper.py  blocked_domains.json  logging_utils.py  main.py  media_extensions.json  message_processing.py  worker_types.py
worker_sync/core/: find_company_logo.py  job_listings_scraper.py  jobs_scraper.py  llm_utils.py  pagination_detector.py  post_process_jobs.py  prompts.py  show_more_button_detector.py  website_scraper.py
(+40 files in other folders)
