[project]
name = "deepsearchjobs"
version = "0.1.0"
description = "DeepSearchJobs is a module of Play2Path dedicated to fetching unique job opportunities across the web, helping you discover and apply to positions that best match your profile, increasing your chances of success."
authors = [
    {name = "abdelwakil.benabdi@play2path.com"}
]
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg==3.2.4",
    "beautifulsoup4==4.13.3",
    "boto3==1.37.9",
    "openai==2.6.1",
    "urllib3==2.3.0",
    "python-dotenv==1.0.1",
    "lxml==5.3.1",
    "lxml-stubs==0.5.1",
    "python-Levenshtein==0.27.1",
    "sentence-transformers==4.0.2",
    "hf_xet",
    "playwright==1.55.0",
    "playwright-stealth==2.0.0",
    "requests==2.32.5",
    "mypy==1.18.2",
    "torch (==2.9.0)",
    "pika (==1.3.2)",
    "redis (==7.0.1)",
    "types-pika (>=1.2.0b1,<2.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "boto3-stubs (>=1.40.72,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
[tool.poetry.dependencies]
torch = {source = "pytorch"}

[tool.poetry]
package-mode = false